# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
migrations/: 20240623064111_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
