[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.8.0"
chrono = "0.4.38"
config = "0.14.0"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", default-features = false, features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.9.0", features = ["v4"] }

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.12.5"
